fix absolute addressing

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -11,7 +11,7 @@ html
       meta(name='description', content="Resume")
       meta(name='keywords', content="software, engineer, web, javascript, full-stack")
 
-      link(rel='stylesheet', href='/stylesheets/index.css', type='text/css')
+      link(rel='stylesheet', href='stylesheets/index.css', type='text/css')
   body.background
     //- block navigation
       include ./_navbar
