changed top links

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -15,9 +15,9 @@ block prepend body
         p Software Engineer
         p
       p.address-line
-        span Mail: 3501 Emerson Avenue, Erie, Pennsylvania, 16508
         span Email: #[a(href='mailto:christopher.andrejewski@gmail.com') christopher.andrejewski@gmail.com]
-        span Phone: +1 814 806 5889
+        span Github: #[a(href='https://github.com/andrejewski') github.com/andrejewski]
+        span Call / Text: +1 814 806 5889
 
     h2 Summary
     p.
@@ -66,7 +66,7 @@ block prepend body
 
     section
       h3 Software Engineer
-      p Interactive Intelligence – Raleigh, North Carolina, May 2013 to August 2013
+      p Interactive Intelligence – Raleigh, North Carolina, May 2016 to August 2016
       ul
         li Reduce bundle size of Collaborate product by roughly 50%
         li Translate legacy CoffeeScript to ES2016 JavaScript
@@ -76,8 +76,8 @@ block prepend body
         li Publish open source projects for logging, Ember code migration, multi-level caching, and command-line interface parsing
 
     section
-      h3 Research assistant
-      p Penn State University – Erie, Pennsylvania, September 2015 to May 2013
+      h3 Research Assistant
+      p Penn State University – Erie, Pennsylvania, September 2015 to May 2016
       ul
         li Research and develop a computer-vision software for librarians to sort books by call number
         li Receive first place for the librarian software at the Penn State - Sigma Xi Undergraduate Research Conference
