extend inin timerange

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -66,11 +66,11 @@ block prepend body
 
     section
       h3 Software Engineer
-      p Interactive Intelligence – Raleigh, North Carolina, May 2016 to August 2016
+      p Interactive Intelligence – Raleigh, North Carolina, May 2016 to December 2016
       ul
         li Reduce bundle size of Collaborate product by roughly 50%
         li Translate legacy CoffeeScript to ES2016 JavaScript
-        li Develop additions to the instant messaging product
+        li Develop additions to the instant messaging product, including PCI compliance features
         li Develop user interface improvements and perform code refactorings and reviews
         li Rewrite the Purecloud JavaScript client software development kit
         li Publish open source projects for logging, Ember code migration, multi-level caching, and command-line interface parsing
