--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -19,50 +19,59 @@ block prepend body
         span Github: #[a(href='https://github.com/andrejewski') github.com/andrejewski]
         span Call / Text: +1 814 806 5889
 
-    h2 Summary
-    p.
-      I am a software engineer who specializes in Node.js, jQuery, Ember, and just about everything else JavaScript.
-      I develop software products from start to finish or anywhere in between.
-      I have experience as a full-stack developer, web application developer, open-source maintainer, and interface designer.
+    section
+      h2 Summary
+      p.
+        I am a software engineer who specializes in Node.js, jQuery, Ember, and just about everything else JavaScript.
+        I develop software products from start to finish or anywhere in between.
+        I have experience as a full-stack developer, web application developer, open-source maintainer, and interface designer.
 
-    h2 Keywords
-    p I have experience with the following technologies and languages.
-    .flex-expand
-      section
-        h4 Server
-        ul
-          li Node.js
-          li Redis
-          li Mongodb
-          li Postgres
-          li Nginx
+    section
+      h2 Keywords
+      p I have experience with the following technologies and languages.
+      .flex-expand
+        section
+          h4 Server
+          ul
+            li Node.js
+            li Redis
+            li Mongodb
+            li Postgres
 
-      section
-        h4 Web
-        ul
-          li JavaScript / CoffeeScript
-          li jQuery / Backbone / Ember / React
-          li HTML / Pug (Jade) / Handlebars
-          li CSS / SASS / LESS / Stylus
-          li Selenium / Phantom.js
+        section
+          h4 Web
+          ul
+            li JavaScript / CoffeeScript
+            li jQuery / Backbone / Ember / React
+            li HTML / Pug (Jade) / Handlebars
+            li CSS / SASS / LESS / Stylus
 
-      section
-        h4 Tools
-        ul
-          li Github / Bitbucket
-          li JIRA / Pivotal Tracker
-          li Sketch / Sketchbook
-          li Atom / Vim
-          li AWS / Digital Ocean
+        section
+          h4 Tools
+          ul
+            li Github / Bitbucket / JIRA
+            li Sketch / Sketchbook
+            li Atom / Vim
+            li AWS / Digital Ocean
 
-      section
-        h4 Other
-        ul
-          li C / C++
-          li Java
-          li English
+        section
+          h4 Other
+          ul
+            li C / C++
+            li Java
+            li English
 
     h2 Work Experience
+
+    section
+      h3 Software Engineer
+      p Bitovi – Chicago, Illinois, March 2017 to present
+      ul
+        li Develop a code modification tool to stream-line multiple large refactorings
+        li Maintain and develop existing libraries, frameworks, and tooling
+        li Work with clients to deliver familiar desktop solutions with better user interfaces in the browser
+        li Teach and mentor fellow developers to better architect and test software
+        li Create open source software to assist in application development
 
     section
       h3 Software Engineer
