--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -11,6 +11,7 @@ html
       meta(name='description', content="Resume")
       meta(name='keywords', content="software, engineer, web, javascript, full-stack")
 
+      | <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
       link(rel='stylesheet', href='stylesheets/index.css', type='text/css')
   body.background
     //- block navigation
