Update resume to include Stripe

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -21,52 +21,27 @@ block prepend body
     section
       h2 Summary
       p.
-        I am a software engineer who specializes in Node.js, jQuery, Ember, and just about everything else JavaScript.
         I develop software products from start to finish or anywhere in between.
+        I design and maintain user and developer experiences and infrastructure.
         I have experience as a full-stack developer, web application developer, open-source maintainer, and interface designer.
-
-    section
-      h2 Keywords
-      p I have experience with the following technologies and languages.
-      .flex-expand
-        section
-          h4 Server
-          ul
-            li Node.js
-            li Redis
-            li Mongodb
-            li Postgres
-
-        section
-          h4 Web
-          ul
-            li JavaScript / CoffeeScript
-            li jQuery / Backbone / Ember / React
-            li HTML / Pug (Jade) / Handlebars
-            li CSS / SASS / LESS / Stylus
-
-        section
-          h4 Tools
-          ul
-            li Github / Bitbucket / JIRA
-            li Sketch / Sketchbook
-            li Atom / Vim
-            li AWS / Digital Ocean
-
-        section
-          h4 Other
-          ul
-            li C / C++
-            li Java
-            li English
 
     h2 Work Experience
 
     section
       h3 Software Engineer
-      p Bitovi – Chicago, Illinois, March 2017 to present
+      p Stripe – San Francisco, California, September 2018 to present
       ul
-        li Develop a code modification tool to stream-line multiple large refactorings
+        li Maintain email, telephony, and push notification infrastructure at scale
+        li Build and secure email infrastructure on top of Amazon SES
+        li Build user interfaces for features within the Stripe Dashboard 
+        li Design and evolve APIs and developer tooling for product teams to build upon
+        li Advocate and automate higher levels of product quality
+
+    section
+      h3 Software Engineer
+      p Bitovi – Chicago, Illinois, March 2017 to August 2018
+      ul
+        li Develop a code modification tool to stream-line multiple large refactors
         li Maintain and develop existing libraries, frameworks, and tooling
         li Work with clients to deliver familiar desktop solutions with better user interfaces in the browser
         li Teach and mentor fellow developers to better architect and test software
@@ -79,8 +54,8 @@ block prepend body
         li Reduce bundle size of Collaborate product by roughly 50%
         li Translate legacy CoffeeScript to ES2016 JavaScript
         li Develop additions to the instant messaging product, including PCI compliance features
-        li Develop user interface improvements and perform code refactorings and reviews
-        li Rewrite the Purecloud JavaScript client software development kit
+        li Develop user interface improvements and perform code refactors and reviews
+        li Rewrite the PureCloud JavaScript client software development kit
         li Publish open source projects for logging, Ember code migration, multi-level caching, and command-line interface parsing
 
     section
@@ -89,7 +64,7 @@ block prepend body
       ul
         li Research and develop a computer-vision software for librarians to sort books by call number
         li Receive first place for the librarian software at the Penn State - Sigma Xi Undergraduate Research Conference
-        li Develop a revived senior design project for the Pennsylvania Seagrant and Wildlife organizations
+        li Develop a revived senior design project for the Pennsylvania SeaGrant and Wildlife organizations
         li Work with the Penn State IT department to place the project in production
 
     section
@@ -97,6 +72,46 @@ block prepend body
       p Netbus Engineering Group – Erie, Pennsylvania, June 2015 to August 2015
       ul
         li Develop a large scale customer management system under startup constraints
-        li Implement service intergations with providers of fraud-prevention to fulfillment solutions
+        li Implement service integrations with providers of fraud-prevention to fulfillment solutions
         li Develop and design large potions of the integrations, customers, and shipping interfaces
         li Work with CoffeeScript, Redis, and Mongodb for rapid prototyping and development
+
+    hr
+
+    section
+      h2 Keywords
+      p I have experience with the following technologies and languages.
+      .flex-expand
+        section
+          h4 Server
+          ul
+            li Node.js
+            li Ruby / Sorbet
+            li Redis
+            li Mongodb
+            li Postgres
+
+        section
+          h4 Web
+          ul
+            li JavaScript / CoffeeScript / Flow
+            li jQuery / Backbone / Ember / React
+            li HTML / Pug (Jade) / Handlebars
+            li CSS / SASS / LESS / Stylus
+            li REST / GraphQL
+
+        section
+          h4 Tools
+          ul
+            li Github / Bitbucket / JIRA
+            li Sketch / Sketchbook
+            li Atom / Vim
+            li AWS / Digital Ocean
+            li Terraform
+
+        section
+          h4 Other
+          ul
+            li C / C++
+            li Java
+            li English
