--- a/docs/stylesheets/index.css
+++ b/docs/stylesheets/index.css
@@ -61,6 +61,13 @@ a {
     text-decoration: none;
   }
 }
+hr {
+  display: block;
+  max-width: 28px;
+  border: none;
+  border-top: 3px solid #000;
+  margin: 25px 0px;
+}
 .document {
   padding: 1.5em;
   max-width: 840px;
