--- a/src/stylesheets/index.less
+++ b/src/stylesheets/index.less
@@ -67,6 +67,14 @@ a {
   }
 }
 
+hr {
+  display: block;
+  max-width: 28px;
+  border: none;
+  border-top: 3px solid #000;
+  margin: 25px 0px;
+}
+
 .document {
   padding: 1.5em;
   max-width: 840px;
