--- a/docs/stylesheets/index.css
+++ b/docs/stylesheets/index.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 body {
   font-size: 0.9em;
@@ -21,7 +21,6 @@ h4,
 h5,
 h6 {
   font-weight: bold;
-  font-family: "Lato", Helvetica, Arial, sans-serif;
 }
 h1 {
   color: #000;
