--- a/src/stylesheets/index.less
+++ b/src/stylesheets/index.less
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 }
 
 body {
@@ -20,7 +20,6 @@ ul {
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
-  font-family: "Lato", Helvetica, Arial, sans-serif;
 }
 
 h1 {
