--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -11,12 +11,13 @@ html
       meta(name='description', content="Resume")
       meta(name='keywords', content="software, engineer, web, javascript, full-stack")
 
-      | <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
       link(rel='stylesheet', href='stylesheets/index.css', type='text/css')
   body.background
-    //- block navigation
-      include ./_navbar
     block body
     block scripts
-      //- script.
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-43674193-3', 'chrisandrejewski.com');ga('send', 'pageview');
+      script(async=true, src="https://www.googletagmanager.com/gtag/js?id=G-G3SKTPFTEZ")
+      script.
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-G3SKTPFTEZ');
